Add firebase-config.js and update paths for standalone deployment

--- a/store.html
+++ b/store.html
@@ -1212,7 +1212,7 @@
     <!-- Firebase & Scripts -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-    <script src="../../js/firebase-config.js"></script>
+    <script src="js/firebase-config.js"></script>
 
     <script>
         const STORE_PATH = 'restaurant-system/restaurants/bon/store';
