--- a/admin-menu.html
+++ b/admin-menu.html
@@ -1041,7 +1041,7 @@
     <!-- Firebase & Scripts -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-    <script src="../../js/firebase-config.js"></script>
+    <script src="js/firebase-config.js"></script>
     <script src="js/sidebar.js?v=1.1"></script>
 
     <script>
