--- a/admin-orders.html
+++ b/admin-orders.html
@@ -295,7 +295,7 @@
     <!-- Firebase & Scripts -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-    <script src="../../js/firebase-config.js"></script>
+    <script src="js/firebase-config.js"></script>
 
     <script>
         const ORDERS_PATH = 'restaurant-system/restaurants/bon/orders';
