--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-    <script src="../../js/firebase-config.js"></script>
+    <script src="js/firebase-config.js"></script>
     
     <script src="js/sidebar.js?v=1.1"></script>
     <script src="js/app.js"></script>
