--- a/menu.html
+++ b/menu.html
@@ -2215,7 +2215,7 @@
     <!-- Firebase & Scripts -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-    <script src="../../js/firebase-config.js"></script>
+    <script src="js/firebase-config.js"></script>
 
     <script>
         // ==========================================
