Update Firebase config to use coffee-82de8 project

--- a/rooms.html
+++ b/rooms.html
@@ -987,13 +987,13 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <script>
         const firebaseConfig = {
-            apiKey: "AIzaSyA3OqvSuKaGAd7RGXP2aY8_6LRJMX1C44M",
-            authDomain: "restaurant-system-demo.firebaseapp.com",
-            databaseURL: "https://restaurant-system-demo-default-rtdb.firebaseio.com",
-            projectId: "restaurant-system-demo",
-            storageBucket: "restaurant-system-demo.appspot.com",
-            messagingSenderId: "844553219498",
-            appId: "1:844553219498:web:e8ddd19c4e0b8f8e8b8b8b"
+            apiKey: "AIzaSyDXUkh29hZMGGp25xNp3p6iBOaV9wRzVcw",
+            authDomain: "coffee-82de8.firebaseapp.com",
+            databaseURL: "https://coffee-82de8-default-rtdb.firebaseio.com",
+            projectId: "coffee-82de8",
+            storageBucket: "coffee-82de8.firebasestorage.app",
+            messagingSenderId: "171535536202",
+            appId: "1:171535536202:web:883c7caf73e26079dad6b3"
         };
         firebase.initializeApp(firebaseConfig);
     </script>
